# ai-bot-coordinator

./: .dockerignore  .env  .pre-commit-hooks.yaml  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  implementation_plan.md  pyproject.toml
.claude/: WARNINGS.md  config.json  vertical-slices.yaml
.claude/skills/architecture-guard/: SKILL.md
.claude/skills/pytest-best-practices/references/: fixtures.md  mocking.md  parametrization.md  patterns.md
.claude/skills/tdd-enforcer/: SKILL.md
alembic/: README.md  env.py
alembic/versions/: 9d71a8985289_initial_schema_with_bots_tasks_and_.py
scripts/: check_domain_imports.py
src/clawbot_coordinator/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py
src/clawbot_coordinator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/clawbot_coordinator/api/routes/: bots.py  tasks.py  websocket.py  workflows.py
src/clawbot_coordinator/api/schemas/: bot_schemas.py  task_schemas.py  workflow_schemas.py
src/clawbot_coordinator/domain/models/: bot.py  task.py  websocket_message.py  workflow.py
src/clawbot_coordinator/workers/: __init__.py  timeout_worker.py
tests/: conftest.py
tests/feature/: test_bot_api.py  test_task_api.py  test_websocket_api.py  test_workflow_api.py
tests/unit/domain/: test_bot.py  test_bot_service.py  test_task.py  test_task_service.py  test_websocket_manager.py  test_websocket_message.py  test_workflow.py
tests/unit/workers/: test_timeout_worker.py
(+10 files in other folders)
